# vcon-zip

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  README.md  TEST_FIXES.md  draft-miller-vcon-zip-bundle-00 copy.txt  pyproject.toml  test_fixes.sh  vcon-zip.code-workspace
examples/: multi_vcon_bundle.py  simple_bundle.py  validation_example.py
src/vcon_zip/: __init__.py  bundle.py  cli.py  extensions.py  file_resolver.py  hash_utils.py  manifest.py  security.py  validation.py  vcon_parser.py
tests/: __init__.py  test_bundle.py  test_cli.py  test_file_resolver.py  test_hash_utils.py  test_integration.py  test_manifest.py  test_validation.py  test_vcon_parser.py
tests/fixtures/: sample_unsigned_vcon.json  sample_vcon_with_external_refs.json
